# ROS2-Foundry

./: .gitignore  README.md  debug_bot.urdf
docs/: ARCHITECTURE.md  DebugLog.md  DevelopLog.md  architecture.md
scripts/: setup_environment.sh
src/fms_interface/: CMakeLists.txt  package.xml
src/fms_interface/action/: RequestTask.action
src/perception_sim/: CMakeLists.txt  package.xml
src/perception_sim/srv/: GetObjectPose.srv
src/ros2_foundry_description/: CMakeLists.txt  package.xml
src/ros2_foundry_description/config/: ros2_controllers.yaml
src/ros2_foundry_description/launch/: display.launch.py
src/ros2_foundry_description/rviz/: display.rviz
src/ros2_foundry_description/urdf/: arm.urdf.xacro  base.urdf.xacro  common.xacro  debug_bot.urdf.xacro  foundry_bot.urdf.xacro  gripper.urdf.xacro  monolithic_bot.urdf  sensors.urdf.xacro
src/ros2_foundry_gazebo/: CMakeLists.txt  package.xml
src/ros2_foundry_gazebo/launch/: gazebo.launch.py
src/ros2_foundry_gazebo/worlds/: factory.world
